# plantprofiles

./: README.md
RIEGL/rivlib-2_5_10-x86_64-linux-gcc9/cmake/: rivlib-config.cmake
RIEGL/rivlib-2_5_10-x86_64-linux-gcc9/doc/rivlib/: CHANGES  COPYING  README
RIEGL/rivlib-2_5_10-x86_64-linux-gcc9/doc/rivlib/examples/: CMakeLists.txt  ReadMe.txt  ctrlifc_demo1.c  ctrllib_demo2.cpp  ctrllib_demo3.cpp  pointcloudcpp.cpp  pointclouddll.c  rxp2txt.dpr  rxp_record.cpp
RIEGL/rivlib-2_5_10-x86_64-linux-gcc9/include/riegl/: buffer.hpp  compressed.hpp  config.hpp  connection.hpp  crxpstream.hpp  ctrlifc.h  ctrllib.hpp  fileconn.hpp  pointcloud.hpp  rddpconn.hpp  rdtpconn.hpp  ridataspec.hpp  rmsmarker.hpp  rxpmarker.hpp  rxpstream.hpp  scanexcept.hpp  scanifc.h  scanlib.hpp  scanmech.hpp  wave.hpp
RIEGL/rivlib-2_5_10-x86_64-linux-gcc9/include/riegl/detail/: baseifc_t.h  binary.hpp  clockcomp.hpp  package.hpp  pointsifc_t.h  uri.hpp
RIEGL/riwavelib_wfm-2_5_10-x86_64-linux-gcc9/: CHANGES  COPYING
RIEGL/riwavelib_wfm-2_5_10-x86_64-linux-gcc9/Py/: fwchart.py  fwifc.py  setup.py
RIEGL/riwavelib_wfm-2_5_10-x86_64-linux-gcc9/include/: fwifc.h
instructions/: 1.0.Installation.ipynb  2.0.MakeSingleProfiles.ipynb  2.ipynb  in.txt
instructions/.ipynb_checkpoints/: 1.0.Installation-checkpoint.ipynb  2.0.MakeSingleProfiles-checkpoint.ipynb
